Fix inline code links contrast

--- a/src/pydata_sphinx_theme/assets/styles/variables/_color.scss
+++ b/src/pydata_sphinx_theme/assets/styles/variables/_color.scss
@@ -194,9 +194,9 @@ $pst-semantic-colors: (
     "dark": #{map-deep-get($color-palette, "pink", "300")},
   ),
   "inline-code-links": (
-    // need to make sure there is enough contrast agains the code bg
-    "light": #{map-deep-get($color-palette, "teal", "700")},
-    "dark": #{map-deep-get($color-palette, "teal", "500")},
+    // need to make sure there is enough contrast against the code bg
+    "light": #{map-deep-get($color-palette, "teal", "600")},
+    "dark": #{map-deep-get($color-palette, "teal", "400")},
   ),
   "target": (
     "light": #8b6e31,
